# budget-app

./: Makefile  README.md
backend/: .gitignore
backend/budget-backend/: Cargo.toml  budget.db
backend/budget-backend/migration/: Cargo.toml
backend/budget-backend/migration/src/: lib.rs  m20220101_000001_create_category_table.rs  m20220101_000002_create_purchase_table.rs
backend/budget-backend/src/: byid.rs  categories.rs  main.rs  purchases.rs  util.rs
backend/budget-backend/src/entities/: category.rs  mod.rs  prelude.rs  purchase.rs
frontend/budget-app/: package-lock.json  package.json
frontend/budget-app/src/: App.jsx  Categories.jsx  Form.jsx  Purchases.jsx  Utils.jsx
