[package]
name = "budget-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["tracing"] } 
serde = { version = "1.0.219", features = ["derive"] } 
tokio = { version = "1.44.1", features = ["full"] } 
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41" 
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] } 

futures = "0.3.28"
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

